--- a/module/VeeamTest/view/layout/layout.phtml
+++ b/module/VeeamTest/view/layout/layout.phtml
@@ -16,10 +16,12 @@
                         ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css') ?>
 
         <?php echo $this->headScript()
+            ->prependFile($this->basePath() . '/js/veeam-test.js')
             ->prependFile($this->basePath() . '/js/bootstrap.min.js')
             ->prependFile($this->basePath() . '/js/jquery.min.js')
             ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
             ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
+
         ; ?>
 
     </head>
@@ -35,9 +37,7 @@
                     <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Veeam Software Test Application') ?></a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                    </ul>
+                    <?php echo $this->navigation('veeam-test-navigation')->menu()->setUlClass("nav navbar-nav"); ?>
                 </div>
             </div>
         </nav>
