--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,11 @@ div.container a.brand {
     margin-left: 0;
     padding: 8px 20px 12px 40px;
 }
+
+.job-list .job-description {
+    display: none;
+}
+
+.job-list .list-group-item {
+    cursor: pointer;
+}
